<resources>
    <string name="app_name">Proiect_Cebuc_Gabriel-Catalin_1079</string>
    <string name="tv_welcome">Welcome Back!</string>
    <string name="tv_messagex">We missed you! Login to get started</string>
    <string name="tv_login">Login</string>
    <string name="ed_gmail">email</string>
    <string name="ed_pass">password</string>
    <string name="cb_text">Remember me!</string>
    <string name="tv_help">Need Help?</string>
    <string name="btn_log">Sign In</string>
    <string name="tv_account">Don\'t have an account?</string>
    <string name="btn_reg">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="et_email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-password</string>
    <string name="op1">Chirias</string>
    <string name="op2">Propietar</string>
    <string name="rg">Alegeti tipul de client:</string>
    <string name="data">Get Date</string>
    <string name="consent">Sunt de acord cu termenele si conditiile</string>
    <string name="sw_text">Doresti sa fii anuntat despre noile oferte pe mail?</string>
    <string name="submit">Submit</string>
    <string name="message">Going</string>
    <string name="wrgFirstName">Please insert value for First Name</string>
    <string name="wrgEmail">Please insert a valid email format</string>
    <string name="wrgRepass">Make sure that you entered the password right</string>
    <string name="agree">Check agree</string>
    <string name="user">Plese chose a type</string>
    <string name="wrgEmail1">Please insert an email adress</string>
    <string name="wrhpass">Enter repassword</string>
    <string name="succes">Succesful register</string>
    <string name="invalid">Not succesful</string>
    <string name="wrgLastName">Plase insert value for Last Name</string>
    <string name="back">Back</string>
    <string name="msg_login">Fill all Fields</string>
    <string name="mss_field">Invalid Credentials</string>
    <string name="userNot">Unregistered User / Incorect email or password</string>
    <string name="propNot">Unregistered User / Incorect email or password</string>
    <string name="merge">Succes</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home_page_prop">HomePageProp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_page_chiriasi">HomePageChiriasiActivity</string>
    <string name="title_activity_page_chirias">PageChiriasActivity</string>
    <string name="title_activity_page_home">PageHomeActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_mata">mata</string>
    <string name="title_activity_nav_drawer_home_page_chirias">NavDrawerHomePageChiriasActivity
    </string>
    <string name="title_activity_home_page_chirias">HomePageChiriasActivity</string>
    <string name="title_activity_aaa">aaa</string>
    <string name="home">Home</string>
    <string name="rent">Rent</string>
    <string name="profile">Profile</string>
    <string name="rate">Rate</string>
    <string name="hello">Hello: </string>
    <string name="house">Rent a house now</string>
    <string name="home1">Feel yourself like home</string>
    <string name="houses">Houses</string>
    <string name="saftey">Saftey</string>
    <string name="price">Best Price</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="profileimfo">Profile Info</string>
    <string name="rate_us">Rate US:</string>
    <string name="selected_rating">Selected rating</string>
    <string name="rate_me">Rate now</string>
    <string name="detele">Delete Account</string>
    <string name="btn_back">Back</string>
    <string name="pret">"Pret: "</string>
    <string name="cancel">Close</string>
    <string name="apartamente">Properties</string>
    <string name="announce">Trust us</string>
    <string name="rent12">Make others feels like home</string>
    <string name="services">Best services</string>
    <string name="constract">Contract</string>
    <string name="info">Additional</string>
    <string name="graf">Money</string>
    <string name="add">Add Flat</string>
    <string name="title">Titlu</string>
    <string name="descriere">Descriere</string>
    <string name="aaa">Pret</string>
    <string name="contact">Date Contact</string>
    <string name="adugarer">Add</string>
    <string name="inapoi"><![CDATA[<-]]></string>
    <string name="texturaa">Apartament adugat cu succes</string>
    <string name="delete">Delete Flat</string>
    <string name="mesaj">Apartament Sters</string>
    <string name="bdprop">Sunt in bd propietari</string>
    <string name="bdchirias">Sunt in bd chirias</string>
    <string name="lista">Please select item to delete</string>
    <string name="deltee">Flat delete</string>
</resources>