<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
        <item
            android:id="@+id/nav_rent"
            android:title="@string/apartamente"
            android:icon="@drawable/rent_icon"/>
    </group>


    <item
        android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>
                <item
                    android:id="@+id/nav_logut"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"
                    />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_rate"
                    android:title="@string/rate"
                    android:icon="@drawable/rateus_icon"/>
                <item
                    android:id="@+id/nav_graf"
                    android:title="@string/graf"
                    android:icon="@drawable/presentation"
                    />
            </group>
        </menu>
    </item>
</menu>