<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormAddFlatPropActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/Handler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/flats"/>
    </RelativeLayout>
    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/Handler"
        app:layout_constraintStart_toStartOf="@id/Handler"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:background="@drawable/shape_left"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/Handler"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:layout_height="350dp"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:background="@drawable/shape_form"
        android:orientation="vertical"
        android:id="@+id/formadd">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/descriere"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/aaa"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/contact"/>
    </LinearLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/adugarer"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/formadd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>