<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_backicon"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="14dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/tv_welcome"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/colorTextWhite"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/tv_messagex"
                android:fontFamily="@font/seg_ui_semibold"
                android:textColor="@color/colorTextWhite"
                />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="36dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:textSize="26dp"
            android:text="@string/tv_login"
            android:fontFamily="@font/seg_ui_semibold"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="48dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <EditText
                android:id="@+id/email"
                android:textColorHint="@color/colorPlaceHolder"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/ed_gmail"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:fontFamily="@font/seg_ui_semibold"
                android:drawableEnd="@drawable/ic_user"
                android:drawableTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"/>
            <EditText
                android:id="@+id/password"
                android:textColorHint="@color/colorPlaceHolder"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="24dp"
                android:hint="@string/ed_pass"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:fontFamily="@font/seg_ui_semibold"
                android:drawableEnd="@drawable/ic_password"
                android:drawableTint="@color/colorTextBlack"
                android:textColor="@color/colorTextBlack"/>
            <CheckBox
                android:buttonTint="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="18dp"
                android:text="@string/cb_text"
                android:textSize="18dp"
                android:textColor="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="18dp"
                        android:text="@string/tv_help"
                        android:fontFamily="@font/seg_ui_semibold"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/btn_singin"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/btn_log"
                        android:textAllCaps="false"
                        android:textColor="@color/colorButtonText"
                        android:textSize="16dp"
                        android:onClick="showToast"
                        android:fontFamily="@font/seg_ui_semibold"/>
                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextBlack"
                android:textSize="16dp"
                android:text="@string/tv_account"
                android:fontFamily="@font/seg_ui_semibold"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="14dp"
                />
            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/btn_reg"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite"
                android:textSize="18dp"
                android:onClick="showToast"
                android:fontFamily="@font/seg_ui_semibold"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>